// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpeechBubble /> should adopt any children 1`] = `
<Container__Container>
  <Bubble__Bubble>
    <span>
      A Child
    </span>
  </Bubble__Bubble>
  <Arrow__Arrow>
    <path
      d="M424.2 424.4L526.9 640V398.7"
      fill="inherit"
      stroke="inherit"
    />
    <path
      d="M848 318.3L424.2 424.4V158.9"
    />
    <path
      d="M0 0l848 318.3L636.4 0H0z"
      fill="inherit"
    />
  </Arrow__Arrow>
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "arrowHeight" prop 1`] = `
<Container__Container>
  <Bubble__Bubble />
  <Arrow__Arrow
    height="1vw"
  >
    <path
      d="M424.2 424.4L526.9 640V398.7"
      fill="inherit"
      stroke="inherit"
    />
    <path
      d="M848 318.3L424.2 424.4V158.9"
    />
    <path
      d="M0 0l848 318.3L636.4 0H0z"
      fill="inherit"
    />
  </Arrow__Arrow>
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "backgroundColor" prop 1`] = `
<Container__Container>
  <Bubble__Bubble
    backgroundColor="#000"
  />
  <Arrow__Arrow>
    <path
      d="M424.2 424.4L526.9 640V398.7"
      fill="#1a1a1a"
      stroke="#1a1a1a"
    />
    <path
      d="M848 318.3L424.2 424.4V158.9"
      fill="#000"
    />
    <path
      d="M0 0l848 318.3L636.4 0H0z"
      fill="#1a1a1a"
    />
  </Arrow__Arrow>
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "isLeftHanded" prop 1`] = `
<Container__Container>
  <Bubble__Bubble
    isLeftHanded={false}
  />
  <Arrow__Arrow
    isLeftHanded={false}
  >
    <path
      d="M424.2 424.4L526.9 640V398.7"
      fill="inherit"
      stroke="inherit"
    />
    <path
      d="M848 318.3L424.2 424.4V158.9"
    />
    <path
      d="M0 0l848 318.3L636.4 0H0z"
      fill="inherit"
    />
  </Arrow__Arrow>
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "maxWidth" prop 1`] = `
<Container__Container
  maxWidth="10em"
>
  <Bubble__Bubble />
  <Arrow__Arrow>
    <path
      d="M424.2 424.4L526.9 640V398.7"
      fill="inherit"
      stroke="inherit"
    />
    <path
      d="M848 318.3L424.2 424.4V158.9"
    />
    <path
      d="M0 0l848 318.3L636.4 0H0z"
      fill="inherit"
    />
  </Arrow__Arrow>
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "padding" prop 1`] = `
<Container__Container>
  <Bubble__Bubble
    padding="0 0px"
  />
  <Arrow__Arrow>
    <path
      d="M424.2 424.4L526.9 640V398.7"
      fill="inherit"
      stroke="inherit"
    />
    <path
      d="M848 318.3L424.2 424.4V158.9"
    />
    <path
      d="M0 0l848 318.3L636.4 0H0z"
      fill="inherit"
    />
  </Arrow__Arrow>
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "showArrowBreakpoint" prop 1`] = `
<Container__Container
  showArrowBreakpoint="100px"
>
  <Bubble__Bubble
    showArrowBreakpoint="100px"
  />
  <Arrow__Arrow
    showBreakpoint="100px"
  >
    <path
      d="M424.2 424.4L526.9 640V398.7"
      fill="inherit"
      stroke="inherit"
    />
    <path
      d="M848 318.3L424.2 424.4V158.9"
    />
    <path
      d="M0 0l848 318.3L636.4 0H0z"
      fill="inherit"
    />
  </Arrow__Arrow>
</Container__Container>
`;

exports[`<SpeechBubble /> should render and match the snapshot 1`] = `
<Container__Container>
  <Bubble__Bubble />
  <Arrow__Arrow>
    <path
      d="M424.2 424.4L526.9 640V398.7"
      fill="inherit"
      stroke="inherit"
    />
    <path
      d="M848 318.3L424.2 424.4V158.9"
    />
    <path
      d="M0 0l848 318.3L636.4 0H0z"
      fill="inherit"
    />
  </Arrow__Arrow>
</Container__Container>
`;
